Replace List.of by ImmutableList.of